--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -10,76 +10,15 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+        <!-- Summary of orderlines -->
+            <StackPanel Grid.Column="1">
 
-        <!-- Implement Grid/List buttons -->
-        <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    Margin="0 0 20 0">
-            <TextBlock Text="Grid"
-                       FontSize="20"
-                       Margin="10"/>
+            </StackPanel>
 
-            <TextBlock Text="List"
-                       FontSize="20"
-                       FontWeight="Bold"
-                       Margin="10"/>
-        </StackPanel>
-
-        <DataGrid Grid.Row="1"
-                  Height="350"
-                  VerticalAlignment="Bottom"
-                  ItemsSource="{Binding Products}"
-                  Margin="0 0 0 20"
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  CanUserDeleteRows="False"
-                  CanUserReorderColumns="False">
-            <DataGrid.Columns>
-                <!-- Product ID -->
-                <DataGridTextColumn Header="No."
-                                    Binding="{Binding ProductID, 
-                                    UpdateSourceTrigger=PropertyChanged}"
-                                    Width="50"/>
-
-                <!-- Product Name -->
-                <DataGridTextColumn Header="Magac"
-                                    Binding="{Binding ProductName, 
-                                    UpdateSourceTrigger=PropertyChanged}"
-                                    Width="200"/>
-
-                <!-- Product Size -->
-                <DataGridComboBoxColumn Header="Cabbir"                                        
-                                        ItemsSource="{Binding Source={StaticResource Sizes}}"
-                                        SelectedValueBinding="{Binding SizeId}"
-                                        SelectedValuePath="SizeId"
-                                        DisplayMemberPath="Name"
-                                        Width="100"/>
-
-                <!-- Flavour -->
-                <DataGridComboBoxColumn Header="Dhadhan"                                        
-                                        ItemsSource="{Binding Source={StaticResource Flavours}}"
-                                        SelectedValueBinding="{Binding FlavourId}"
-                                        SelectedValuePath="FlavourId"
-                                        DisplayMemberPath="Name"
-                                        Width="100"/>
-
-                <!-- Add Button -->
-                <DataGridTemplateColumn Width="70">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Content="Ku dar"
-                                    Command="{Binding AddToOrderCommand}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
     </Grid>
+
 </UserControl>
