--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -6,19 +6,101 @@
         xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
         xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels"
         mc:Ignorable="d"
-        Height="450" Width="800">
+        Height="450" Width="800"
+             Background="AliceBlue">
 
     <Grid>
+        <!-- Definerer kolonner -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="70*"/>
+            <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="76*"/>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="8*"/>
+            </Grid.RowDefinitions>
+            <!-- Summary View of selected products to order -->
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel Orientation="Vertical">
+                    <!-- Header -->
+                    <TextBlock Text="Dalabka"
+                               HorizontalAlignment="Center"
+                               FontSize="18"/>
 
-        <!-- Summary of orderlines -->
-            <StackPanel Grid.Column="1">
+                    <!-- List of orderlines -->
+                    <ListBox Name="OrderLinesListBox" 
+                         ItemsSource="{Binding OrderLines, UpdateSourceTrigger=PropertyChanged}"
+                         SelectedItem="{Binding SelectedOrderLine, UpdateSourceTrigger=PropertyChanged}"
+                         HorizontalAlignment="Stretch"
+                         Background="Transparent"
+                         BorderThickness="0">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Margin="5">
+                                    <!-- Product details -->
+                                    <TextBlock>
+                                        <TextBlock.Text>
+                                            <MultiBinding StringFormat="{}{0} | {1}, {2}">
+                                                <Binding Path="Product.ProductName"/>
+                                                <Binding Path="Product.Size.Name"/>
+                                                <Binding Path="Product.Flavour.Name"/>
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
 
+                                    <!-- Edit Quantity -->
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Tiro: " />
+                                        <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                                    </StackPanel>
+
+                                    <StackPanel Orientation="Horizontal">
+                                        <!-- Enter Discount -->
+                                        <TextBlock Text="Rabat: "
+                                               FontSize="14" Foreground="AliceBlue"/>
+                                        <TextBox Text="{Binding Discount, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <!-- See Price -->
+                                        <TextBlock Text="Price: "/>
+                                        <TextBlock Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" 
+                                               Foreground="AliceBlue" FontSize="14"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </StackPanel>
+            </ScrollViewer>
+            
+            <!-- Add Note -->
+            <Button Grid.Row="1" 
+                    Content="Ku dar qoraal"
+                    Command="{Binding NewOrderNoteCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Padding="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"/>
+
+            <!-- Running Total -->
+            <StackPanel Grid.Row="2" 
+                            Orientation="Horizontal" 
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                <TextBlock Text="Qiimaha Guud: " />
+                <TextBlock Text="{Binding OrderTotal, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
 
+            <!-- Continue Button -->
+            <Button Grid.Row="3" 
+                    Content="Sii Soco"
+                    Command="{Binding NewOrderRegistrationCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Padding="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"/>
+
+        </Grid>
     </Grid>
 
 </UserControl>
