Nye Views og ViewModels

--- a/OMSUI/App.xaml
+++ b/OMSUI/App.xaml
@@ -6,8 +6,28 @@
              xmlns:view="clr-namespace:OrderManagerDesktopUI.Views">
     
     <Application.Resources>
+        <DataTemplate DataType="{x:Type TypeName=vm:HomeViewModel}">
+            <view:HomeView/>
+        </DataTemplate>
+
         <DataTemplate DataType="{x:Type TypeName=vm:NewOrderViewModel}">
             <view:NewOrderView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type TypeName=vm:OrdersViewModel}">
+            <view:OrdersView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type TypeName=vm:ProductsViewModel}">
+            <view:ProductsView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type TypeName=vm:CustomersViewModel}">
+            <view:CustomersView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type TypeName=vm:SalesDataViewModel}">
+            <view:SalesDataView/>
         </DataTemplate>
     </Application.Resources>
 </Application>
