--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
         xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels"
         mc:Ignorable="d"
-        Height="450" Width="800"
+        Height="425" Width="625"
              Background="AliceBlue">
 
     <Grid>
@@ -33,8 +33,10 @@
 
                     <!-- List of orderlines -->
                     <ListBox Name="OrderLinesListBox" 
-                         ItemsSource="{Binding OrderLines, UpdateSourceTrigger=PropertyChanged}"
-                         SelectedItem="{Binding SelectedOrderLine, UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding OrderLines, 
+                         UpdateSourceTrigger=PropertyChanged}"
+                         SelectedItem="{Binding SelectedOrderLine, 
+                         UpdateSourceTrigger=PropertyChanged}"
                          HorizontalAlignment="Stretch"
                          Background="Transparent"
                          BorderThickness="0">
@@ -55,18 +57,21 @@
                                     <!-- Edit Quantity -->
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Tiro: " />
-                                        <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <TextBox Text="{Binding Quantity, 
+                                                 UpdateSourceTrigger=PropertyChanged}"/>
                                     </StackPanel>
 
                                     <StackPanel Orientation="Horizontal">
                                         <!-- Enter Discount -->
                                         <TextBlock Text="Rabat: "
                                                FontSize="14" Foreground="AliceBlue"/>
-                                        <TextBox Text="{Binding Discount, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <TextBox Text="{Binding Discount, 
+                                                 UpdateSourceTrigger=PropertyChanged}"/>
                                         <!-- See Price -->
                                         <TextBlock Text="Price: "/>
-                                        <TextBlock Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" 
-                                               Foreground="AliceBlue" FontSize="14"/>
+                                        <TextBlock Text="{Binding Price, 
+                                                   UpdateSourceTrigger=PropertyChanged}" 
+                                                   Foreground="AliceBlue" FontSize="14"/>
                                     </StackPanel>
                                 </StackPanel>
                             </DataTemplate>
@@ -78,7 +83,8 @@
             <!-- Add Note -->
             <Button Grid.Row="1" 
                     Content="Ku dar qoraal"
-                    Command="{Binding NewOrderNoteCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Command="{Binding NewOrderNoteCommand, 
+                    UpdateSourceTrigger=PropertyChanged}"
                     Padding="5"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"/>
@@ -89,13 +95,15 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center">
                 <TextBlock Text="Qiimaha Guud: " />
-                <TextBlock Text="{Binding OrderTotal, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="{Binding OrderTotal, 
+                           UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
 
             <!-- Continue Button -->
             <Button Grid.Row="3" 
                     Content="Sii Soco"
-                    Command="{Binding NewOrderRegistrationCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Command="{Binding NewOrderRegistrationCommand, 
+                    UpdateSourceTrigger=PropertyChanged}"
                     Padding="5"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"/>
