--- a/OMSUI/Views/CustomersView.xaml
+++ b/OMSUI/Views/CustomersView.xaml
@@ -5,8 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="DarkGray">
     <Grid>
-            
+        <Label Content="CUSTOMERSVIEW"
+               FontSize="30"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
