--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels"
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
-        Background="DarkGray">
+        Background="GhostWhite">
 
     <Grid>
         <!-- Definerer kolonner -->
@@ -17,8 +17,8 @@
         </Grid.ColumnDefinitions>
 
         <ContentControl Grid.Column="0"
-                        Content="{Binding Navigation.CurrentNestedView}"/>
-
+                        Content="{Binding Navigation.CurrentNestedView}">
+        </ContentControl>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="76*"/>
@@ -30,16 +30,14 @@
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <StackPanel Orientation="Vertical">
                     <!-- Header -->
-                    <TextBlock Text="Dalabka"
+                    <TextBlock Text="Order"
                                HorizontalAlignment="Center"
                                FontSize="18"/>
 
                     <!-- List of orderlines -->
                     <ListBox Name="OrderLinesListBox" 
-                         ItemsSource="{Binding OrderLines, 
-                         UpdateSourceTrigger=PropertyChanged}"
-                         SelectedItem="{Binding SelectedOrderLine, 
-                         UpdateSourceTrigger=PropertyChanged}"
+                         ItemsSource="{Binding OrderLines, UpdateSourceTrigger=PropertyChanged}"
+                         SelectedItem="{Binding SelectedOrderLine, UpdateSourceTrigger=PropertyChanged}"
                          HorizontalAlignment="Stretch"
                          Background="Transparent"
                          BorderThickness="0">
@@ -47,34 +45,27 @@
                             <DataTemplate>
                                 <StackPanel Margin="5">
                                     <!-- Product details -->
-                                    <TextBlock>
-                                        <TextBlock.Text>
-                                            <MultiBinding StringFormat="{}{0} | {1}, {2}">
-                                                <Binding Path="Product.ProductName"/>
-                                                <Binding Path="Product.Size.Name"/>
-                                                <Binding Path="Product.Flavour.Name"/>
-                                            </MultiBinding>
-                                        </TextBlock.Text>
-                                    </TextBlock>
+                                    <TextBlock Text="{Binding Product.Name}"
+                                               FontWeight="Bold"/>
 
                                     <!-- Edit Quantity -->
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Tiro: " />
-                                        <TextBox Text="{Binding Quantity, 
-                                                 UpdateSourceTrigger=PropertyChanged}"/>
+                                        <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"/>
                                     </StackPanel>
-
+                                    
+                                    <!-- Enter Discount -->
                                     <StackPanel Orientation="Horizontal">
-                                        <!-- Enter Discount -->
-                                        <TextBlock Text="Rabat: "
-                                               FontSize="14" Foreground="AliceBlue"/>
-                                        <TextBox Text="{Binding Discount, 
-                                                 UpdateSourceTrigger=PropertyChanged}"/>
-                                        <!-- See Price -->
+                                        <TextBlock Text="Rabat: "/>
+                                        <TextBox Text="{Binding Discount, UpdateSourceTrigger=PropertyChanged}"
+                                             Background="Transparent"
+                                             BorderThickness=" 0"/>
+                                    </StackPanel>
+                                    
+                                    <!-- See Price -->
+                                    <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="Price: "/>
-                                        <TextBlock Text="{Binding Price, 
-                                                   UpdateSourceTrigger=PropertyChanged}" 
-                                                   Foreground="AliceBlue" FontSize="14"/>
+                                        <TextBlock Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
                                     </StackPanel>
                                 </StackPanel>
                             </DataTemplate>
@@ -86,8 +77,7 @@
             <!-- Add Note -->
             <Button Grid.Row="1" 
                     Content="Ku dar qoraal"
-                    Command="{Binding NewOrderNoteCommand, 
-                    UpdateSourceTrigger=PropertyChanged}"
+                    Command="{Binding NewOrderNoteCommand, UpdateSourceTrigger=PropertyChanged}"
                     Padding="5"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"/>
@@ -98,8 +88,7 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center">
                 <TextBlock Text="Qiimaha Guud: " />
-                <TextBlock Text="{Binding OrderTotal, 
-                           UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="{Binding OrderTotal, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
 
             <!-- Continue Button -->
