--- a/OMSUI/Views/ProductsView.xaml
+++ b/OMSUI/Views/ProductsView.xaml
@@ -8,9 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800"
              Background="DarkGray">
     <Grid>
-        <Label Content="PRODUCTSVIEW"
-               FontSize="30"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"/>
+        <TextBlock Text="{Binding NoteText, UpdateSourceTrigger=PropertyChanged}"
+                   FontSize="40"/>
     </Grid>
 </UserControl>
