--- a/OMSUI/Views/NewOrderProductsView.xaml
+++ b/OMSUI/Views/NewOrderProductsView.xaml
@@ -4,47 +4,67 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OrderManagerDesktopUI.Views" 
-             xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels"
+             xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels" xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
-             d:DesignHeight="425" d:DesignWidth="510"
-             Background="AliceBlue">
-    <Grid>
-        <StackPanel DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:NewOrderView}}">
-            <DataGrid Grid.Row="1"
-                  AutoGenerateColumns="False"
-                  VerticalAlignment="Top"
-                  ItemsSource="{Binding DataContext.Products, UpdateSourceTrigger=PropertyChanged}"
-                  SelectedItem="{Binding DataContext.SelectedProduct, UpdateSourceTrigger=PropertyChanged}">
+             d:DesignHeight="425" d:DesignWidth="510">
+    <Grid> <!-- DataContext="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:NewOrderView}}">
+        <Border Style="{StaticResource whiteBorder}" Margin="15 0 15 7">
+            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
+              ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+              CellStyle="{DynamicResource DataGridCellStyle1}" 
+              Style="{DynamicResource DataGridStyle1}"
+              ItemsSource="{Binding DataContext.Products, UpdateSourceTrigger=PropertyChanged}"
+              SelectedItem="{Binding DataContext.SelectedProduct, UpdateSourceTrigger=PropertyChanged}"
+              VerticalAlignment="Stretch">
                 <DataGrid.Columns>
-                    <!-- Product ID -->
-                    <DataGridTextColumn Header="No."
-                    Binding="{Binding ProductId, UpdateSourceTrigger=PropertyChanged}"
-                    Width="50"/>
-
-                    <!-- Product Name -->
-                    <DataGridTextColumn Header="Magac"
-                    Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
-                    Width="200"/>
-
-                    <!-- Product Price -->
-                    <DataGridTextColumn Header="Qiimo"
-                    Binding="{Binding Price, UpdateSourceTrigger=PropertyChanged}"
-                    Width="200"/>
-
-                    <!-- Add Button -->
-                    <DataGridTemplateColumn Width="*">
+                    <DataGridTextColumn Header="No." IsReadOnly="True" CanUserResize="False" Width="auto" 
+                                Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
+                                Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Starting Price" IsReadOnly="True" Width="*"
+                                Binding="{Binding Price, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTemplateColumn Header="Taste" IsReadOnly="True" Width="*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Ku dar"
-                            Command="{Binding Path=DataContext.AddToOrderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:NewOrderView}}"
-                            CommandParameter="{Binding}"/>
+                                <TextBlock Text="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellEditingTemplate>
+                            <DataTemplate>
+                                <ComboBox ItemsSource="{Binding Path=Tastes, UpdateSourceTrigger=PropertyChanged}"
+                                  SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}">
+                                </ComboBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellEditingTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Size" IsReadOnly="True" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=SelectedSize, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellEditingTemplate>
+                            <DataTemplate>
+                                <ComboBox ItemsSource="{Binding Path=Sizes, UpdateSourceTrigger=PropertyChanged}"
+                                  SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}">
+                                </ComboBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellEditingTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Add" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Background="Transparent" BorderThickness="0"
+                            Style="{DynamicResource gridAddButton}"
+                                Command="{Binding DataContext.AddToOrderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:NewOrderView}}"
+                                CommandParameter="{Binding}">
+                                    <Icon:PackIconMaterial Kind="PlusCircleOutline" Foreground="#222528"/>
+                                </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <Label Content="{Binding DataContext.SelectedProduct.Name}"
-               FontSize="24"/>
-        </StackPanel>
+        </Border> -->
     </Grid>
 </UserControl>
