--- a/OMSUI/Views/NewOrderView.xaml
+++ b/OMSUI/Views/NewOrderView.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
-        xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels"
+        xmlns:vm="clr-namespace:OrderManagerDesktopUI.ViewModels" 
+        xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        d:DesignHeight="450" d:DesignWidth="800"
-        Background="GhostWhite">
+        d:DesignHeight="800" d:DesignWidth="1200">
 
     <Grid>
         <!-- Definerer kolonner -->
@@ -16,88 +16,231 @@
             <ColumnDefinition Width="30*"/>
         </Grid.ColumnDefinitions>
 
-        <ContentControl Grid.Column="0"
-                        Content="{Binding Navigation.CurrentNestedView}">
-        </ContentControl>
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="76*"/>
-                <RowDefinition Height="8*"/>
-                <RowDefinition Height="8*"/>
-                <RowDefinition Height="8*"/>
-            </Grid.RowDefinitions>
-            <!-- Summary View of selected products to order -->
-            <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <StackPanel Orientation="Vertical">
-                    <!-- Header -->
-                    <TextBlock Text="Order"
-                               HorizontalAlignment="Center"
-                               FontSize="18"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70*"/>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="22*"/>
+        </Grid.RowDefinitions>
 
-                    <!-- List of orderlines -->
-                    <ListBox Name="OrderLinesListBox" 
-                         ItemsSource="{Binding OrderLines, UpdateSourceTrigger=PropertyChanged}"
+
+        <Border Style="{StaticResource whiteBorder}" Margin="15 0 15 7">
+            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" 
+              ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
+              CellStyle="{DynamicResource DataGridCellStyle1}" 
+              Style="{DynamicResource DataGridStyle1}"
+              ItemsSource="{Binding Products, UpdateSourceTrigger=PropertyChanged}"
+              SelectedItem="{Binding SelectedProduct, UpdateSourceTrigger=PropertyChanged}"
+              VerticalAlignment="Stretch">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="No." IsReadOnly="True" CanUserResize="False" Width="auto" 
+                                Binding="{Binding Id, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Name" IsReadOnly="True" Width="*"
+                                Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Starting Price" IsReadOnly="True" Width="*"
+                                Binding="{Binding Price, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTemplateColumn Header="Taste" IsReadOnly="True" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellEditingTemplate>
+                            <DataTemplate>
+                                <ComboBox ItemsSource="{Binding Path=Tastes, UpdateSourceTrigger=PropertyChanged}"
+                                  SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}">
+                                </ComboBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellEditingTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Size" IsReadOnly="True" Width="*">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=SelectedSize, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                        <DataGridTemplateColumn.CellEditingTemplate>
+                            <DataTemplate>
+                                <ComboBox ItemsSource="{Binding Path=Sizes, UpdateSourceTrigger=PropertyChanged}"
+                                  SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}">
+                                </ComboBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellEditingTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn Header="Add" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Background="Transparent" BorderThickness="0"
+                                        Style="{DynamicResource gridAddButton}"
+                                        Command="{Binding DataContext.AddToOrderCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}"
+                                        CommandParameter="{Binding}">
+                                    <Icon:PackIconMaterial Kind="PlusCircleOutline" Foreground="#222528"/>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Border>
+
+        <Border Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="15 7 15 7">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Add" 
+                   VerticalAlignment="Center" 
+                   HorizontalAlignment="Left"
+                   FontWeight="Medium"
+                   Margin="15 0 20 0"/>
+                <!-- Add Note -->
+                <Button Style="{StaticResource addButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Note"/>
+                    </StackPanel>
+                </Button>
+                <!-- Add Discount -->
+                <Button Style="{StaticResource addButton}" >
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Discount"/>
+                    </StackPanel>
+                </Button>
+                <!-- Add Delivery -->
+                <Button Style="{StaticResource addButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Delivery"/>
+                    </StackPanel>
+                </Button>
+                <!-- Add Payment -->
+                <Button Style="{StaticResource addButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Payment"/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+        </Border>
+
+        <ContentControl Grid.Row="2" Content="{Binding Navigation.CurrentNestedView}"
+                             Margin="15 7 15 0"/>
+
+        <Grid Grid.Column="1" Grid.RowSpan="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="70*"/>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
+            
+            <Border Style="{StaticResource whiteBorder}" Margin="0 0 0 7">
+                <Grid>
+                    <!-- Header -->
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <StackPanel VerticalAlignment="Center">
+                            <TextBlock Text="Customer FullName" FontWeight="Medium" FontSize="11"/>
+                            <!-- {Binding SelectedCustomer.FullName, UpdateSourceTrigger=PropertyChanged}"-->
+                            <TextBlock Text="Customer PhoneNumber" FontWeight="Medium" FontSize="11"/>
+                            <!-- {Binding SelectedCustomer.PhoneNumber, UpdateSourceTrigger=PropertyChanged}" -->
+                        </StackPanel>
+                        <Button Style="{StaticResource addButton}" 
+                            Height="25" Margin="10">
+                            <StackPanel Orientation="Horizontal">
+                                <Icon:PackIconMaterial Kind="AccountPlusOutline" Margin="0 0 10 0"/>
+                                <TextBlock Text="Add Customer"/>
+                            </StackPanel>
+                        </Button>
+
+                    </StackPanel>
+                </Grid>
+            </Border>
+
+            <Border Grid.Row="1" Style="{StaticResource whiteBorder}" Margin="0 7 0 7">
+                <ScrollViewer  VerticalScrollBarVisibility="Auto">
+                        <!-- List of orderlines -->
+                    <ListBox ItemsSource="{Binding OrderLines, UpdateSourceTrigger=PropertyChanged}"
                          SelectedItem="{Binding SelectedOrderLine, UpdateSourceTrigger=PropertyChanged}"
-                         HorizontalAlignment="Stretch"
                          Background="Transparent"
+                         HorizontalContentAlignment="Stretch"
                          BorderThickness="0">
                         <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Margin="5">
-                                    <!-- Product details -->
-                                    <TextBlock Text="{Binding Product.Name}"
-                                               FontWeight="Bold"/>
+                                <DataTemplate>
+                                    <StackPanel Margin="2">
+                                        <!-- Product Name -->
+                                        <TextBlock Text="{Binding Product.Name}" FontWeight="Light" FontSize="16"/>
+                                        <StackPanel Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Product.SelectedTaste}" FontWeight="Light"/>
+                                            <TextBlock Text="{Binding Product.SelectedSize}" FontWeight="Light"/>
+                                        </StackPanel>
 
-                                    <!-- Edit Quantity -->
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Tiro: " />
-                                        <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"/>
-                                    </StackPanel>
-                                    
-                                    <!-- Enter Discount -->
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Rabat: "/>
-                                        <TextBox Text="{Binding Discount, UpdateSourceTrigger=PropertyChanged}"
-                                             Background="Transparent"
-                                             BorderThickness=" 0"/>
-                                    </StackPanel>
-                                    
-                                    <!-- See Price -->
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Price: "/>
-                                        <TextBlock Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
-                                    </StackPanel>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                </StackPanel>
-            </ScrollViewer>
+                                        <Grid>
+                                            <TextBlock Text="{Binding Price, StringFormat={}{0:C0}, UpdateSourceTrigger=PropertyChanged}" 
+                                               FontSize="14"
+                                               Margin="0,3,0,3"/>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                                <Button Background="Transparent" BorderThickness="0"
+                                                Command="{Binding DecreaseQuantityCommand}"
+                                                CommandParameter="{Binding}"
+                                                Margin="3">
+                                                    <Icon:PackIconMaterial Kind="MinusCircleOutline"/>
+                                                </Button>
 
-            <!-- Add Note -->
-            <Button Grid.Row="1" 
-                    Content="Ku dar qoraal"
-                    Command="{Binding NewOrderNoteCommand, UpdateSourceTrigger=PropertyChanged}"
-                    Padding="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
+                                                <TextBlock Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"
+                                                   FontSize="14"
+                                                   Margin="3"/>
+
+                                                <Button Background="Transparent" BorderThickness="0" 
+                                                Command="{Binding IncreaseQuantityCommand}"
+                                                CommandParameter="{Binding}"
+                                                HorizontalContentAlignment="Right"
+                                                HorizontalAlignment="Right"
+                                                Margin="3">
+                                                    <Icon:PackIconMaterial Kind="PlusCircleOutline"/>
+                                                </Button>
+                                            </StackPanel>
+                                        </Grid>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </ScrollViewer>
+            </Border>       
 
             <!-- Running Total -->
-            <StackPanel Grid.Row="2" 
-                            Orientation="Horizontal" 
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center">
-                <TextBlock Text="Qiimaha Guud: " />
-                <TextBlock Text="{Binding OrderTotal, UpdateSourceTrigger=PropertyChanged}"/>
-            </StackPanel>
+            <Border Grid.Row="2" Background="#e0f5ee" CornerRadius="3">
+                <Grid Margin="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel HorizontalAlignment="Left">
+                        <TextBlock Text="Discount" FontSize="15" FontWeight="Regular"/>
+                        <TextBlock Text="Subtotal" FontSize="15" FontWeight="Regular" Margin="0 5 0 0"/>
+                        <TextBlock Text="Payable Amount" FontSize="18" FontWeight="Medium" Margin="0 15 0 0"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Column="1" HorizontalAlignment="Right">
+                        <TextBlock Text="{Binding Discount, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="15" FontWeight="Regular"/>
+                        <TextBlock Text="{Binding Subtotal, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="15" FontWeight="Regular" Margin="0 5 0 0"/>
+                        <TextBlock Text="{Binding OrderTotal, UpdateSourceTrigger=PropertyChanged}"
+                                   FontSize="18" FontWeight="Medium" VerticalAlignment="Bottom" Margin="0 15 0 0" />
+                    </StackPanel>
+                </Grid>
+            </Border>
+            <!-- Cancel Button -->
+            <Button Grid.Row="4"
+                    Width="100"
+                    Content="Cancel"
+                    Command="{Binding NavigateToNewOrderProductsCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Padding="5"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"/>
 
             <!-- Continue Button -->
-            <Button Grid.Row="3" 
-                    Content="Continue to registration"
-                    Command="{Binding NavigateToNewOrderRegistrationCommand}"
+            <Button Grid.Row="4"
+                    Width="100"
+                    Content="Place Order"
+                    Command="{Binding NavigateToNewOrderDetailsCommand, UpdateSourceTrigger=PropertyChanged}"
                     Padding="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
+                    HorizontalAlignment="Right"
+                VerticalAlignment="Center"/>
         </Grid>
     </Grid>
 </UserControl>
