--- a/OMSUI/Views/NoteView.xaml
+++ b/OMSUI/Views/NoteView.xaml
@@ -1,16 +1,12 @@
-﻿<UserControl x:Class="OrderManagerDesktopUI.Views.HomeView"
+﻿<UserControl x:Class="OrderManagerDesktopUI.Views.NoteView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="DarkGray">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Label Content="HOMEVIEW"
-               FontSize="30"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"/>
+            
     </Grid>
 </UserControl>
